--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BT</title>
+    <title>illust.ktsn.dev</title>
   </head>
   <body class="bg-gray-100 text-gray-900">
     <div id="app"></div>
